# animate.hpp

./: CMakeLists.txt  LICENSE  README.md  animate.hpp  makefile
src/: animate.hpp  main.cpp
test/: test.cpp
